rbk: mobile version

--- a/rbk/index.html
+++ b/rbk/index.html
@@ -35,9 +35,22 @@
     </div>
     <div class="container-fluid">
       <div class="row middle-xs">
-        <div class="col-xs-3 col-sm-5 col-md-3">
+        <div class="col-xs-9 col-sm-5 col-md-3">
           <div class="rbk-header__logo">
-            <i class="puzzle-icon" style="width: 275px; height: 30px;">
+            <i class="rbk-header__logo-mobile puzzle-icon" style="width: 186px; height: 47px;">
+              <svg width="186" height="47" viewBox="0 0 186 47" xmlns="http://www.w3.org/2000/svg">
+                <g fill="none" fill-rule="evenodd">
+                  <path fill="#00A9A8" d="M14 0v6.824L30 10V7.452z"/>
+                  <path fill="#364155" d="M14 0L3 8.286V11l11-3.615zM25.989 13.247L14 11v7l11.989-2.247H26v-2.505z"/>
+                  <path fill="#00A9A8" d="M0 13.26v2.504L14 18v-7zM14 23.176V30l16-7.452V20z"/>
+                  <path fill="#364155" d="M3 21.713L14 30v-7.385L3 19z"/>
+                  <g fill="#364155">
+                    <path d="M45.945 10.035c-.257 0-.51.01-.76.025-.25.014-.464.03-.646.044v4.565h1.111c1.225 0 2.147-.167 2.767-.501.62-.336.93-.96.93-1.872 0-.442-.079-.807-.238-1.096a1.835 1.835 0 0 0-.68-.697 3.073 3.073 0 0 0-1.077-.364 8.846 8.846 0 0 0-1.407-.104M45.718 7c2.344 0 4.144.415 5.4 1.245C52.371 9.073 53 10.433 53 12.318c0 1.902-.635 3.277-1.906 4.12-1.27.844-3.085 1.266-5.444 1.266h-1.11V23H41V7.411a20.33 20.33 0 0 1 2.45-.32c.862-.06 1.618-.091 2.268-.091M60.823 19.96a9.73 9.73 0 0 0 1.349-.09 3.798 3.798 0 0 0 1.131-.334c.328-.16.59-.375.789-.65.198-.274.297-.633.297-1.073 0-.458-.091-.833-.274-1.12a1.904 1.904 0 0 0-.777-.687c-.336-.167-.747-.283-1.235-.342a13.253 13.253 0 0 0-1.646-.093h-1.05v4.343c.167.015.368.028.604.035.237.008.507.011.812.011zm-1.417-9.943v2.606h1.165c1.174 0 2.222.091 3.143.275.923.182 1.7.48 2.332.89a4.126 4.126 0 0 1 1.452 1.6c.335.655.502 1.457.502 2.4 0 1.753-.636 3.06-1.908 3.921C64.819 22.57 63.002 23 60.64 23c-.64 0-1.368-.04-2.183-.114A17.322 17.322 0 0 1 56 22.474V7h10.515v3.017h-7.109zM80.629 23c-.33-.52-.722-1.084-1.17-1.688a38.54 38.54 0 0 0-1.452-1.83 28.232 28.232 0 0 0-1.63-1.766 17.363 17.363 0 0 0-1.7-1.493V23H71V7h3.677v6.014a152.35 152.35 0 0 0 2.881-3.051C78.533 8.9 79.434 7.913 80.26 7h4.363a107.585 107.585 0 0 1-3.355 3.741 115.728 115.728 0 0 1-3.55 3.612c1.306 1.068 2.567 2.334 3.78 3.8A47.428 47.428 0 0 1 85 23h-4.371zM47.285 43c-1.088 0-2.078-.176-2.971-.53a6.309 6.309 0 0 1-2.303-1.547c-.64-.676-1.135-1.513-1.485-2.507C40.176 37.42 40 36.282 40 35s.198-2.419.593-3.413c.394-.995.928-1.832 1.598-2.51a6.731 6.731 0 0 1 2.345-1.546 7.685 7.685 0 0 1 2.86-.531 10.428 10.428 0 0 1 3.072.443c.38.117.69.235.928.352.238.119.403.207.492.266l-.626 1.768a3.49 3.49 0 0 0-.58-.288c-.254-.102-.54-.206-.86-.31a7.715 7.715 0 0 0-1.052-.252c-.379-.067-.763-.101-1.15-.101-.819 0-1.556.14-2.212.42a4.544 4.544 0 0 0-1.675 1.217c-.462.53-.816 1.174-1.063 1.933-.245.76-.368 1.61-.368 2.552 0 .914.108 1.746.324 2.498.216.75.54 1.396.972 1.934.432.537.972.953 1.62 1.248.648.295 1.404.442 2.268.442.998 0 1.824-.102 2.48-.31.655-.206 1.147-.39 1.474-.551l.56 1.768a3.137 3.137 0 0 1-.56.275 7.405 7.405 0 0 1-1.005.32 12.834 12.834 0 0 1-3.15.376M63 31v1.8h-3.92V43H56.92V32.8H53V31zM72.882 37.078c0-1.355-.328-2.398-.982-3.128-.655-.73-1.529-1.095-2.62-1.095-.612 0-1.09.021-1.431.067a5.513 5.513 0 0 0-.818.156v7.33c.247.209.603.41 1.07.603.465.195.974.291 1.528.291.581 0 1.08-.107 1.496-.323a2.767 2.767 0 0 0 1.014-.895c.262-.38.451-.828.567-1.34.117-.515.176-1.07.176-1.666m2.118 0a8.36 8.36 0 0 1-.339 2.436c-.225.746-.557 1.386-.993 1.923a4.56 4.56 0 0 1-1.605 1.251c-.633.296-1.358.446-2.172.446-.655 0-1.234-.09-1.736-.268-.503-.178-.877-.349-1.124-.514V47H65V31.604c.48-.12 1.08-.25 1.801-.392.72-.141 1.553-.212 2.5-.212.874 0 1.66.142 2.359.426a5.017 5.017 0 0 1 1.79 1.205c.495.522.877 1.158 1.146 1.911.269.752.404 1.597.404 2.536M86.814 37c0-1.29-.297-2.31-.89-3.065-.595-.755-1.402-1.132-2.424-1.132s-1.83.377-2.423 1.132c-.594.755-.89 1.775-.89 3.065s.296 2.31.89 3.065c.593.755 1.401 1.132 2.423 1.132s1.83-.377 2.424-1.132c.593-.754.89-1.775.89-3.065M89 37c0 .909-.135 1.73-.405 2.461a5.611 5.611 0 0 1-1.138 1.89c-.49.528-1.071.934-1.748 1.22A5.6 5.6 0 0 1 83.5 43a5.605 5.605 0 0 1-2.21-.43 4.992 4.992 0 0 1-1.746-1.219 5.575 5.575 0 0 1-1.138-1.89C78.136 38.73 78 37.909 78 37c0-.892.135-1.71.406-2.45.27-.74.65-1.373 1.138-1.901a5 5 0 0 1 1.747-1.22A5.615 5.615 0 0 1 83.5 31a5.61 5.61 0 0 1 2.209.43 5.012 5.012 0 0 1 1.748 1.219 5.6 5.6 0 0 1 1.138 1.9c.27.741.405 1.559.405 2.451M97.011 29.199c-.96 0-1.742-.244-2.345-.731-.603-.487-.965-1.166-1.086-2.035L95.204 26c.122.487.328.883.617 1.188.29.305.687.456 1.19.456.504 0 .9-.15 1.19-.456.29-.305.495-.7.619-1.188l1.6.433c-.12.869-.48 1.548-1.075 2.035-.595.487-1.373.73-2.334.73zM102 31.118V43h-2.06v-9.049c-.458.579-.96 1.257-1.51 2.035a93.54 93.54 0 0 0-1.648 2.41c-.548.83-1.075 1.65-1.578 2.456A87.66 87.66 0 0 0 93.9 43H92V31.118h2.06v8.546c.397-.655.846-1.374 1.35-2.16a66.829 66.829 0 0 1 3.192-4.548c.541-.708 1.049-1.32 1.522-1.838H102zM111 43V27h2.22v11.844a60.447 60.447 0 0 1 1.836-2.794 99.198 99.198 0 0 1 2.315-3.197c.819-1.084 1.644-2.139 2.479-3.163a46.879 46.879 0 0 1 2.349-2.69H124v16h-2.222V30.51c-.436.492-.91 1.062-1.425 1.71a79.693 79.693 0 0 0-1.59 2.064c-.547.731-1.095 1.49-1.65 2.275a126.17 126.17 0 0 0-1.6 2.321c-.516.76-.995 1.495-1.44 2.204-.443.708-.838 1.347-1.18 1.916H111zM137 43h-2.183v-5.307h-5.633V43H127V31h2.184v4.892h5.633V31H137zM143.126 41.25a9.596 9.596 0 0 0 .982.077c.217.008.447.016.69.023.24.007.47.01.688.01.452 0 .883-.028 1.297-.088.413-.06.771-.162 1.074-.31.305-.147.545-.342.724-.587.18-.243.27-.556.27-.94 0-.368-.082-.676-.246-.919a1.779 1.779 0 0 0-.666-.585 3.1 3.1 0 0 0-.992-.31 7.97 7.97 0 0 0-1.227-.09h-2.594v3.72zm2.314-5.246c.42 0 .805-.026 1.155-.077.352-.052.655-.144.911-.277.259-.134.461-.31.608-.532.148-.221.222-.5.222-.841 0-.353-.093-.634-.28-.841a1.813 1.813 0 0 0-.736-.476 4.245 4.245 0 0 0-1.027-.222 12.307 12.307 0 0 0-1.157-.055c-.359 0-.721.008-1.087.023-.366.014-.674.029-.923.043v3.255h2.314zM145.392 43c-.919 0-1.767-.041-2.546-.123-.779-.08-1.394-.173-1.846-.277V31.4c.452-.104 1.067-.197 1.846-.277a24.588 24.588 0 0 1 2.546-.123c.64 0 1.262.052 1.87.156a5.44 5.44 0 0 1 1.612.52c.467.243.844.576 1.133.995.288.422.433.942.433 1.563 0 .56-.148 1.039-.445 1.437a2.925 2.925 0 0 1-1.191.93c.67.221 1.203.551 1.6.986.398.435.596 1.044.596 1.826 0 .694-.144 1.27-.432 1.726a3.225 3.225 0 0 1-1.191 1.108c-.507.281-1.103.476-1.788.586-.686.111-1.418.167-2.197.167zM160.863 35.911c.015-.924-.217-1.684-.693-2.278-.478-.596-1.135-.893-1.972-.893-.47 0-.884.093-1.243.276-.361.182-.666.421-.915.715-.25.293-.445.632-.583 1.012-.14.384-.232.772-.277 1.168h5.683zM153 37.033c0-1.012.147-1.895.441-2.652.293-.756.683-1.383 1.167-1.883a4.774 4.774 0 0 1 1.674-1.123A5.23 5.23 0 0 1 158.22 31c1.542 0 2.724.482 3.547 1.442.822.963 1.233 2.427 1.233 4.394v.34c0 .14-.008.269-.022.386h-7.841c.088 1.19.433 2.092 1.035 2.709.602.616 1.542.924 2.82.924.72 0 1.324-.062 1.817-.188.491-.123.862-.245 1.112-.362l.286 1.717c-.25.133-.687.272-1.31.42a9.454 9.454 0 0 1-2.126.218c-.999 0-1.86-.15-2.588-.45-.726-.3-1.325-.717-1.795-1.245a5.064 5.064 0 0 1-1.047-1.882 7.957 7.957 0 0 1-.341-2.39zM170.825 43c-.96 0-1.8-.147-2.524-.44a5.101 5.101 0 0 1-1.827-1.232 5.057 5.057 0 0 1-1.108-1.883c-.244-.728-.366-1.53-.366-2.412 0-.88.134-1.688.4-2.421a5.647 5.647 0 0 1 1.13-1.905 5.054 5.054 0 0 1 1.794-1.256c.708-.299 1.497-.451 2.365-.451.532 0 1.064.044 1.598.132a7.5 7.5 0 0 1 1.531.42l-.48 1.738a5.357 5.357 0 0 0-1.108-.352 6.548 6.548 0 0 0-1.336-.133c-1.189 0-2.098.361-2.73 1.08-.632.72-.948 1.768-.948 3.148 0 .616.073 1.182.217 1.697.145.512.373.953.685 1.32.312.368.713.649 1.2.848.486.2 1.08.298 1.781.298.563 0 1.073-.053 1.532-.155a5.78 5.78 0 0 0 1.073-.33L174 42.43a2.282 2.282 0 0 1-.525.209 7.489 7.489 0 0 1-.777.176 14.89 14.89 0 0 1-.925.132 8.685 8.685 0 0 1-.948.054M186 31v1.8h-3.92V43h-2.158V32.8H176V31z"/>
+                  </g>
+                </g>
+              </svg>
+            </i>
+            <i class="rbk-header__logo-desktop puzzle-icon" style="width: 275px; height: 30px;">
               <svg width="406" height="45" viewBox="0 0 406 45" xmlns="http://www.w3.org/2000/svg">
                 <g fill="none" fill-rule="evenodd">
                   <path fill="#00A9A8" d="M21 0v10.236L45 15v-3.822z"/>
@@ -52,7 +65,7 @@
             </i>
           </div>
         </div>
-        <div class="col-xs-8 col-sm-7 col-md-8 col-md-offset-1 puzzle_ta_right">
+        <div class="col-xs-3 col-sm-7 col-md-8 col-md-offset-1 puzzle_ta_right">
           <div class="rbk-header__menu puzzle_va_middle">
             <div class="rbk-header__menu-mobile-icon rbk-header__menu-mobile-icon_js_click puzzle-icon__wrapper" style="width: 30px; height: 30px;">
               <i class="puzzle-icon" style="width: 20px; height: 15px;">
@@ -85,6 +98,19 @@
                <a href="javascript:void(0)" class="rbk-header__menu-item">
                 Контакты 
               </a>
+               <div class="rbk-header__menu-item is-search">
+                <form action="">
+                  <input type="text" placeholder="Введите запрос" class="rbk-header__search-form-input puzzle_va_middle">
+                  <button type="submit" class="puzzle-icon puzzle_va_middle" style="width: 50px; height: 50px;">
+                    <svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
+                      <g fill="none" fill-rule="evenodd">
+                        <path d="M27.427 29.427a8.5 8.5 0 1 1 2-2l5.585 5.585c.55.55.546 1.43 0 1.976l-.024.024a1.399 1.399 0 0 1-1.976 0l-5.585-5.585zM22.5 29a6.5 6.5 0 1 0 0-13 6.5 6.5 0 0 0 0 13z" fill-rule="nonzero" fill="#000"/>
+                        <rect stroke="#DAE1E7" stroke-width="2" x="1" y="1" width="48" height="48" rx="24"/>
+                      </g>
+                    </svg>
+                  </button>
+                </form>
+               </div>
             </div>
          </div>
          <i class="rbk-header__search rbk-header__search_js_click puzzle-icon puzzle_va_middle" style="width: 22px; height: 22px;">
@@ -104,12 +130,12 @@
           <div class="rbk-main-slider__slidee">
             <div class="rbk-main-slider__item">
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-pic">
                     <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
                   </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-text">
                     <h1 class="rbk-main-slider__item-text-title">
                       Жилой комплекс
@@ -128,12 +154,12 @@
             </div>
             <div class="rbk-main-slider__item">
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-pic">
                     <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
                   </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-text">
                     <h1 class="rbk-main-slider__item-text-title">
                       2 Жилой комплекс
@@ -152,12 +178,12 @@
             </div>
             <div class="rbk-main-slider__item">
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-pic">
                     <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
                   </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-text">
                     <h1 class="rbk-main-slider__item-text-title">
                       3 Жилой комплекс
@@ -176,12 +202,12 @@
             </div>
             <div class="rbk-main-slider__item">
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-pic">
                     <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
                   </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="rbk-main-slider__item-text">
                     <h1 class="rbk-main-slider__item-text-title">
                       4 Жилой комплекс
@@ -200,8 +226,8 @@
             </div>
           </div>
         </div>
-        <div class="row" style="z-index: 100; position: relative;">
-          <div class="col-xs-6 col-xs-offset-6">
+        <div class="row center-xs start-sm" style="z-index: 100; position: relative;">
+          <div class="col-xs-12 col-sm-6 col-sm-offset-6">
             <div class="rbk-main-slider__paginator"></div>
           </div>
         </div>
@@ -215,7 +241,7 @@
       </h3>
       <div class="rbk-benefits-list">
         <div class="row">
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="rbk-benefits-item is-blue">
               <div class="rbk-benefits-item-icon">
                 <i class="puzzle-icon" style="width: 60px; height: 60px;">
@@ -242,7 +268,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="rbk-benefits-item is-green">
               <div class="rbk-benefits-item-icon">
                 <i class="puzzle-icon" style="width: 60px; height: 60px;">
@@ -274,7 +300,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="rbk-benefits-item is-yellow">
               <div class="rbk-benefits-item-icon">
                 <i class="puzzle-icon" style="width: 60px; height: 60px;">
@@ -514,7 +540,7 @@
 <section class="rbk-slogan">
   <div class="container-fluid puzzle_ta_center">
     <div class="rbk-slogan__text">
-      DeRus Allianz — не только профессионально управляет стоительными проектами различной сложности. Мы обладаем собственной русурсной и материальной базой для реализации больше йчасти общестроительных работ собственными силами, что позволяет гарантировать высокое качество строительства каждого объекта. 
+      DeRus Allianz — не только профессионально управляет стоительными проектами различной сложности. Мы обладаем собственной русурсной и материальной базой для реализации большей части общестроительных работ собственными силами, что позволяет гарантировать высокое качество строительства каждого объекта. 
     </div>
   </div>
 </section>
@@ -635,7 +661,7 @@
 <footer class="rbk-footer">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-4 col-sm-5 col-md-4">
+      <div class="col-xs-12 col-sm-5 col-md-4">
         <div class="rbk-footer__logo">
           <i class="puzzle-icon" style="width: 275px; height: 31px;">
             <svg width="406" height="45" viewBox="0 0 406 45" xmlns="http://www.w3.org/2000/svg">
@@ -673,7 +699,7 @@
           </a>
         </div>
       </div>
-      <div class="col-xs-3 col-sm-3 col-md-3">
+      <div class="col-xs-12 col-sm-3 col-md-3">
         <div class="rbk-footer__menu">
           <div class="rbk-footer__menu-item">
             <a href="javascript:void(0)" class="rbk-footer__menu-item-link">
@@ -707,7 +733,28 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-5 col-sm-4 col-md-5">
+      <div class="rbk-footer__social-mobile col-xs-12">
+        <div class="rbk-footer__social-title puzzle_va_middle">
+          Мы онлайн:
+        </div>
+        <a href="javascript:void(0)" class="rbk-footer__social-item puzzle-icon puzzle_va_middle" style="width: 48px; height: 48px;">
+          <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="nonzero" fill="#FFF">
+              <path d="M0 23.634c.184-5.621 1.903-10.476 5.333-14.69 4.02-4.95 9.236-7.938 15.603-8.733 7.4-.92 13.932 1.168 19.39 6.205 4.84 4.463 7.391 10.046 7.652 16.596.28 7.086-2.145 13.176-7.207 18.175-3.884 3.84-8.608 6.1-14.086 6.665-7.662.785-14.27-1.552-19.7-6.933-4.019-3.984-6.26-8.858-6.86-14.47A30.162 30.162 0 0 1 0 23.634zm23.98 22.523c12.018.048 22.037-9.643 22.163-21.891.125-12.478-9.932-22.283-21.903-22.389-12.144-.105-22.25 9.643-22.317 21.92-.087 12.42 9.787 22.36 22.056 22.36z" opacity=".254"/>
+              <path d="M25.815 35V23.999h3.254l.431-3.791h-3.685l.005-1.898c0-.989.1-1.518 1.623-1.518h2.034V13h-3.255c-3.91 0-5.285 1.84-5.285 4.932v2.276H18.5v3.791h2.437V35h4.878z"/>
+            </g>
+          </svg>
+        </a>
+        <a href="javascript:void(0)" class="rbk-footer__social-item puzzle_va_middle puzzle-icon" style="width: 48px; height: 48px;">
+          <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="nonzero" fill="#FFF">
+              <path d="M0 23.634c.184-5.621 1.903-10.476 5.333-14.69 4.02-4.95 9.236-7.938 15.603-8.733 7.4-.92 13.932 1.168 19.39 6.205 4.84 4.463 7.391 10.046 7.652 16.596.28 7.086-2.145 13.176-7.207 18.175-3.884 3.84-8.608 6.1-14.086 6.665-7.662.785-14.27-1.552-19.7-6.933-4.019-3.984-6.26-8.858-6.86-14.47A30.162 30.162 0 0 1 0 23.634zm23.98 22.523c12.018.048 22.037-9.643 22.163-21.891.125-12.478-9.932-22.283-21.903-22.389-12.144-.105-22.25 9.643-22.317 21.92-.087 12.42 9.787 22.36 22.056 22.36z" opacity=".239"/>
+              <path d="M26.003 20.986c.1.02.13-.049.172-.104 1.098-1.556 2.67-2.053 4.528-1.832 2.224.263 3.644 1.645 4.132 3.906.108.498.158 1.003.158 1.507.007 2.406 0 4.813.007 7.225 0 .236-.057.319-.316.312a137.05 137.05 0 0 0-3.372 0c-.28.007-.337-.083-.337-.332.007-2.213.007-4.425 0-6.638 0-.428-.036-.843-.186-1.258-.23-.63-.675-1.03-1.313-1.265-1.722-.63-3.43.435-3.451 2.205-.029 2.227-.007 4.446-.007 6.672 0 .609 0 .609-.653.609-1.005 0-2.009-.007-3.013.007-.259 0-.352-.049-.352-.318.014-3.976.007-7.951.007-11.92 0-.207.05-.277.28-.277 1.148.014 2.296.007 3.444 0 .222 0 .294.063.28.277-.022.401-.008.816-.008 1.224zM15.005 25.51c0-2.035.006-4.063-.005-6.098 0-.347.08-.419.317-.412a54.07 54.07 0 0 0 2.42 0c.193 0 .263.058.263.34-.005 4.114-.005 8.228 0 12.342 0 .26-.065.318-.247.318a72.165 72.165 0 0 0-2.5 0c-.21.007-.248-.101-.248-.354.006-2.043 0-4.092 0-6.135zM15 13.958c.014-1.166.845-1.965 2.045-1.958 1.166.014 1.976.862 1.955 2.05-.021 1.137-.873 1.957-2.032 1.95-1.158 0-1.975-.855-1.968-2.042z"/>
+            </g>
+          </svg>
+        </a>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-md-5">
         <div class="rbk-footer__address" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
           <div class="rbk-footer__address-title rbk-footer__address-row">
             Адрес:
