--- a/rbk/index.html
+++ b/rbk/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <title>РБК Строй Инвест</title>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="assets/css/screen.css">
