rbk: gallery added

--- a/rbk/gallery.html
+++ b/rbk/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-  <title>Новости РБК Строй Инвест</title>
+  <title>Галерея РБК Строй Инвест</title>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="assets/css/lightbox.css">
   <link rel="stylesheet" href="assets/css/screen.css">
@@ -124,134 +124,45 @@
   </div>
 </header>
 <div class="page-wrapper">
-  <section class="rbk-subheader rbk-subheader_type_small-padding">
-    <div class="container-fluid">
-      <div class="rbk-subheader__back-link">
-        <a href="javascript:void(0)"><&nbsp;&nbsp; Назад</a>
-      </div>
-      <h1 class="rbk-subheader__title">
-        Завершен проект строительства завода
-      </h1>
-      <div class="rbk-subheader__date">
-        23 октября 2017
-      </div>
-    </div>
+  <section class="rbk-subheader">
+    <h1 class="rbk-subheader__title">
+      Галерея
+    </h1>
   </section>
-<div class="rbk-news-item">
+<section class="rbk-news-page rbk-gallery">
   <div class="container-fluid">
-    <div class="rbk-news-item__slider">
-      <div class="rbk-news-item__slider-frame">
-        <div class="rbk-news-item__slider-slidee">
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="http://placehold.it/600x388/333/fff" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="http://placehold.it/600x388/333/fff" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
+    <div class="row">
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/1.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/1.jpg" alt="">
+          </a>
         </div>
       </div>
-      <div class="rbk-news-item__slider-preview-list">
-        <div class="rbk-news-item__slider-preview-list-item" data-item="1">
-          <img src="assets/img/temp/krono2.jpg" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="2">
-          <img src="http://placehold.it/600x388/333/fff" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="3">
-          <img src="assets/img/temp/krono2.jpg" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="4">
-          <img src="http://placehold.it/600x388/333/fff" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="5">
-          <img src="assets/img/temp/krono2.jpg" alt="">
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/2.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/2.jpg" alt="">
+          </a>
         </div>
       </div>
-    </div>
-    <div class="rbk-news-item__text cf">
-      <p><strong>Наша компания выиграла тендер на выполнение функций генерального проектировщика и генерального подрядчика по реализации проекта Химического завода по производству поверхностно-активных веществ (ПАВ) в Ленинградской области.</strong></p>
-      <p>Информационная справка (статья в газете "Деловой Петербург", 25.02.2016):</p>
-      <p>Бывший топ–менеджер НРБ Сергей Ильченко построит в Ленобласти химический завод по производству компонентов для моющих средств. Инвестор вложил в проект около 100 млн рублей своих средств и еще 1 млрд рублей привлечет от российских инвестфондов.
-        <br>
-      ПАВ — основной компонент для изготовления моющих средств. Емкость российского рынка ПАВ — 600 тыс. тонн, или 100 млрд рублей в год. В планах Сергея Ильченко занять, как минимум, 2% российского рынка.</p>
-      <p><strong>Наша компания выиграла тендер на выполнение функций генерального проектировщика и генерального подрядчика по реализации проекта Химического завода по производству поверхностно-активных веществ (ПАВ) в Ленинградской области.</strong></p>
-      <p>Информационная справка (статья в газете "Деловой Петербург", 25.02.2016):</p>
-      <p>Бывший топ–менеджер НРБ Сергей Ильченко построит в Ленобласти химический завод по производству компонентов для моющих средств. Инвестор вложил в проект около 100 млн рублей своих средств и еще 1 млрд рублей привлечет от российских инвестфондов.
-        <br>
-      ПАВ — основной компонент для изготовления моющих средств. Емкость российского рынка ПАВ — 600 тыс. тонн, или 100 млрд рублей в год. В планах Сергея Ильченко занять, как минимум, 2% российского рынка.</p>
-      <p><strong>Наша компания выиграла тендер на выполнение функций генерального проектировщика и генерального подрядчика по реализации проекта Химического завода по производству поверхностно-активных веществ (ПАВ) в Ленинградской области.</strong></p>
-      <p>Информационная справка (статья в газете "Деловой Петербург", 25.02.2016):</p>
-      <p>Бывший топ–менеджер НРБ Сергей Ильченко построит в Ленобласти химический завод по производству компонентов для моющих средств. Инвестор вложил в проект около 100 млн рублей своих средств и еще 1 млрд рублей привлечет от российских инвестфондов.
-        <br>
-      ПАВ — основной компонент для изготовления моющих средств. Емкость российского рынка ПАВ — 600 тыс. тонн, или 100 млрд рублей в год. В планах Сергея Ильченко занять, как минимум, 2% российского рынка.</p>
-
-      <h4 class="rbk-news-item__text-title">
-        Заголовок небольшой
-      </h4>
-      <div class="rbk-news-item__text-pic is-right">
-        <a data-lightbox="rbkImg1" href="assets/img/temp/krono2.jpg"><img src="assets/img/temp/krono2.jpg" alt=""></a>
-      </div>
-      <p><strong>Наша компания выиграла тендер на выполнение функций генерального проектировщика и генерального подрядчика по реализации проекта Химического завода по производству поверхностно-активных веществ (ПАВ) в Ленинградской области.</strong></p>
-      <p>Информационная справка (статья в газете "Деловой Петербург", 25.02.2016):</p>
-      <p>Бывший топ–менеджер НРБ Сергей Ильченко построит в Ленобласти химический завод по производству компонентов для моющих средств. Инвестор вложил в проект около 100 млн рублей своих средств и еще 1 млрд рублей привлечет от российских инвестфондов.
-        <br>
-      ПАВ — основной компонент для изготовления моющих средств. Емкость российского рынка ПАВ — 600 тыс. тонн, или 100 млрд рублей в год. В планах Сергея Ильченко занять, как минимум, 2% российского рынка.</p>
-    </div>
-    <div class="rbk-news-item__slider rbk-news-item__slider_size_big">
-      <div class="rbk-news-item__slider-frame">
-        <div class="rbk-news-item__slider-slidee">
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="http://placehold.it/600x388/333/fff" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="http://placehold.it/600x388/333/fff" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
-          <div class="rbk-news-item__slider-pic">
-            <img src="assets/img/temp/krono2.jpg" alt="">
-          </div>
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/3.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/3.jpg" alt="">
+          </a>
         </div>
       </div>
-      <div class="rbk-news-item__slider-preview-list">
-        <div class="rbk-news-item__slider-preview-list-item" data-item="1">
-          <img src="assets/img/temp/krono2.jpg" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="2">
-          <img src="http://placehold.it/600x388/333/fff" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="3">
-          <img src="assets/img/temp/krono2.jpg" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="4">
-          <img src="http://placehold.it/600x388/333/fff" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="5">
-          <img src="assets/img/temp/krono2.jpg" alt="">
-        </div>
-        <div class="rbk-news-item__slider-preview-list-item" data-item="6">
-          <img src="assets/img/temp/krono2.jpg" alt="">
+      <div class="col-xs-3">
+        <div class="rbk-gallery__item">
+          <a href="assets/img/temp/krono2.jpg" data-lightbox="rbkGallery1">
+            <img src="assets/img/temp/krono2.jpg" alt="">
+          </a>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
 </div>
 <footer class="rbk-footer">
   <div class="container-fluid">
@@ -349,7 +260,7 @@
           </svg>
         </a>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-5">
+      <div class="col-xs-12 col-sm-3 col-md-5">
         <div class="rbk-footer__address" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
           <div class="rbk-footer__address-title rbk-footer__address-row">
             Адрес:
