--- a/rbk/index.html
+++ b/rbk/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <title>РБК Строй Инвест</title>
   <link rel="icon" href="favicon.png">
+  <link rel="stylesheet" href="assets/css/lightbox.css">
   <link rel="stylesheet" href="assets/css/screen.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -779,6 +780,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="assets/js/plugins.js"></script>
 <script src="assets/js/sly.min.js"></script>
+<script src="assets/js/lightbox.js"></script>
 
 <!-- custom -->
 <script src="assets/js/script.js"></script>
